--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "any-promise": "^1.3.0",
     "array-flatten": "^1.1.1",
     "available-typed-arrays": "^1.0.5",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "bytes": "^3.1.1",
     "call-bind": "^1.0.2",
@@ -25,6 +26,7 @@
     "dotenv": "^10.0.0",
     "dottie": "^2.0.2",
     "ee-first": "^1.1.1",
+    "email-validator": "^2.0.4",
     "encodeurl": "^1.0.2",
     "es-abstract": "^1.19.1",
     "es-get-iterator": "^1.1.2",
@@ -107,7 +109,7 @@
     "semver": "^7.3.5",
     "send": "^0.17.2",
     "seq-queue": "^0.0.5",
-    "sequelize": "^6.12.0",
+    "sequelize": "^6.12.2",
     "sequelize-pool": "^7.1.0",
     "serve-static": "^1.14.2",
     "setprototypeof": "^1.2.0",
