--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.3"
   },
+  "prettier": {
+    "singleQuote": true,
+    "semi": true,
+    "trailingComma": "none"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js",
     "seed": "node seeds/index.js"
   },
@@ -28,5 +33,8 @@
   "bugs": {
     "url": "https://github.com/leticianardi/spicy-bites/issues"
   },
-  "homepage": "https://github.com/leticianardi/spicy-bites#readme"
+  "homepage": "https://github.com/leticianardi/spicy-bites#readme",
+  "devDependencies": {
+    "jest": "^27.4.5"
+  }
 }
