--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
+    "image-uploader": "^2.0.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.5"
   },
