--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "## Packages Installed * express-session * connect-session-sequelize * dotenv * express * mysql2 * sequelize * email-validator * bcrypt * express-handlebars",
   "main": "server.js",
   "dependencies": {
+    "aws-sdk": "^2.1053.0",
     "bcrypt": "^5.0.1",
     "connect-session-sequelize": "^7.1.2",
     "dotenv": "^10.0.0",
@@ -11,9 +12,11 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
-    "image-uploader": "^2.0.2",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.12.5"
+    "sequelize": "^6.12.5",
+    "shortid": "^2.2.16"
   },
   "prettier": {
     "singleQuote": true,
